Make manual builder cleaner, better to have something that works consistently

--- a/esdoc-publish-html-plugin/src/Builder/template/header.html
+++ b/esdoc-publish-html-plugin/src/Builder/template/header.html
@@ -3,7 +3,7 @@
 
 <div class="search-box">
     <span>
-        <img src="./image/search.png"/>
+        <img src="/image/search.png"/>
         <span class="search-input-edge"></span><input class="search-input"/><span class="search-input-edge"></span>
     </span>
     <ul class="search-result"></ul>
