--- a/esdoc-publish-html-plugin/src/Builder/template/manualIndex.html
+++ b/esdoc-publish-html-plugin/src/Builder/template/manualIndex.html
@@ -1,7 +1,3 @@
-<div class="manual-toc-root">
-  <div data-ice="manual">
-    <ul class="manual-toc">
-      <li data-ice="manualNav"><a href="" data-ice="link"></a></li>
-    </ul>
-  </div>
+<div class="github-markdown">
+  <div class="manual-user-index" data-ice="manualUserIndex"></div>
 </div>
